# ReproChecker

./: .gitignore  API设计.md  LICENSE  README.md  pyproject.toml  技术方案.md  数据库设计.md
.github/workflows/: test.yml
reprochecker/: __init__.py  cli.py  config.py  logging.py  pipeline.py
reprochecker/compare/: curve_compare.py  metric_compare.py  resource_compare.py
reprochecker/pdf/: constants.py  extractor.py  llm_parser.py
reprochecker/repo/: analyzer.py  cloner.py  env_builder.py
reprochecker/report/: badge.py  chart.py  generator.py  latex.py  scorer.py
reprochecker/report/templates/: report.html
reprochecker/runner/: __init__.py  executor.py  metric_capture.py  resource_monitor.py
reprochecker/storage/: db.py
tests/: conftest.py  test_analyzer.py  test_badge.py  test_batch.py  test_chart.py  test_cli.py  test_cloner.py  test_compare.py  test_config.py  test_csv_export.py  test_db.py  test_dry_run.py  test_env_builder.py  test_executor.py  test_latex.py  test_llm_parser.py  test_md_report.py  test_metric_capture.py  test_pipeline.py  test_report.py  test_resource_monitor.py  test_scorer.py  test_trend.py
