[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reprochecker"
version = "0.1.0"
description = "学术论文可复现性自动检验工具"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0,<0.10.0",
    "rich>=13.0.0,<14.0.0",
    "pymupdf>=1.23.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
pdf = [
    "weasyprint>=60.0",
]
llm = [
    "openai>=1.0.0",
]
charts = [
    "matplotlib>=3.7.0",
]

[project.scripts]
repro = "reprochecker.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"reprochecker/report/generator.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
